--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -28,6 +28,43 @@
   background: #ccc;
 }
 
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background: #ff5885;
+  z-index: 100;
+
+  p {
+    font-size: 100px;
+    font-weight: 900;
+    letter-spacing: -11px;
+
+    @include mobile {
+      font-size: 30px;
+      letter-spacing: -3px;
+    }
+
+    .char {
+      opacity: 0;
+      transform: scale(0.5);
+    }
+  }
+
+  svg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: rotate(180deg) translateY(-100%);
+  }
+
+}
+
 .wrapper {
   margin: 0 auto;
   overflow: hidden;
